# rust-kall

./: .env  .gitignore  Cargo.toml  Makefile  config_example.yaml  go.mod  go.sum  main.go  main_notify.go  restart.cpp
config/: config.go  config.yaml  config_example.yaml
discord/: discord.go
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/plugins/: vuetify.ts
global/: global.go
migrations/: 000001_init.up.sql
notify_bot/: go.mod  main.go
rest/: rest.go
sharkscope/: sharkscope.go
src/: config.rs  main.rs  sharkscope.rs
src/migrations/: 000001_init.up.sql
store/: common.go  store.go
